--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,28 @@
+# Streamlit and utilities
 streamlit==1.39.0
 python-dotenv==1.0.1
 PyPDF2==3.0.1
-langchain==0.3.4
-langchain-core==0.3.12
-langchain-community==0.3.3
-langchain-text-splitters==0.3.0
-langchain-google-genai==1.0.10
-langchain-groq==0.1.3
-pinecone-client==3.2.2
+
+# LangChain core
+langchain==0.2.14
+langchain-core==0.2.34
+langchain-community==0.2.12  
+langchain-google-genai==1.0.5
+google-generativeai==0.5.2
+
+
+# Embeddings
+sentence-transformers==3.1.1
+transformers==4.45.2
+torch==2.4.1
+
+# Optional utilities
+tiktoken==0.7.0
+pydantic==2.8.2
+typing-extensions==4.12.2
+requests==2.32.3
+altair==4.2.2
+
+# Qdrant client
+qdrant-client==1.12.1
+
